--- a/style.css
+++ b/style.css
@@ -1,21 +1,73 @@
-body{
+body {
+    font-size: 20px;
+    box-sizing: border-box;
+    background-color: rgb(45, 146, 254);
+    font-family: 'Inclusive Sans', sans-serif;
+    font-family: 'PT Serif', serif;
+}
+
+#title {
+    font-size: 1.5rem;
+    background-color: #88fbff;
+    width: 20%;
+    margin: auto;
+    padding: 15px;
+    align-items: center;
     text-align: center;
-    margin: 0;
-    background-color: #4e7dba;
+    border-radius: 50px;
+
 }
 
-#title{
-    padding: 10px;
-    margin-bottom: 10px;
-    
+#inserts {
+    width: 20%;
+    height: 300px;
+    display: flex;
+    background-color: #88fbff;
+    justify-content: space-around;
+    flex-direction: column;
+    margin-top: 5px;
+    box-shadow: 10px 10px;
+    padding: 30px;
 }
 
-.inserts{
-    background-color: cyan;
+.card-img {
+    width: 90%;
+    height: 60%;
+    margin: auto;
 }
-
-
-
+#submit{
+    margin-top: 5px;
+}
 #carddisplay {
-    font-size: 2vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    background-color: black;
+    height: 1000px;
+}
+
+div {
+    text-align: center;
+    margin: auto;
+    align-items: center;
+
+}
+
+@media screen and (max-width: 1200px) {
+    .card {
+        width: 40%;
+    }
+    #title {
+        font-size: 1.2rem;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .card {
+        width: 100%;
+    }
+    #title{
+        font-size: 1rem;
+    }
 }
