up to remove button

--- a/style.css
+++ b/style.css
@@ -18,21 +18,21 @@ body {
 
 }
 
-#inserts {
+.inserts {
     width: 20%;
-    height: 300px;
-    display: flex;
+    height: 550px;
     background-color: #88fbff;
     justify-content: space-around;
     flex-direction: column;
-    margin-top: 5px;
+    margin-top: 50px;
     box-shadow: 10px 10px;
     padding: 30px;
+    display: flex;
 }
 
-.card-img {
+.opener-image {
     width: 90%;
-    height: 60%;
+    height: 65%;
     margin: auto;
 }
 #submit{
@@ -43,8 +43,6 @@ body {
     flex-direction: row;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    background-color: black;
-    height: 1000px;
 }
 
 div {
